--- a/main.tex
+++ b/main.tex
@@ -231,7 +231,7 @@ $$\dblJacobiSum{\pi}{\chi} = \frac{1}{\sizeof{\lieAlgebra}^{1 \slash 2}} \sum_{\
 \det\left(g \pm \idmap_{\hermitianSpace}\right) \ne 0}} \pi\left(g\right) \chi\left(\det\left(\idmap_{\hermitianSpace} \pm g\right)\right).$$
 
 Notice that $$\negDblJacobiSum{\pi}{\chi} = \frac{1}{\sizeof{\lieAlgebra}^{1/2}}\sum_{\substack{g \in G, h \in \GL\left(\hermitianSpace\right)\\
-g + h = \idmap_{\hermitianSpace}}} \pi\left(g\right) \chi\left(\detQuadratic\left(h\right)\right),$$
+g + h = \idmap_{\hermitianSpace}}} \pi\left(g\right) \chi\left(\det h\right),$$
 which resembles a classical Jacobi sum attached to characters $\chi_1, \chi_2 \colon \multiplicativegroup{\finiteField} \to \multiplicativegroup{\cComplex}$:
 $$\sum_{\substack{x_1,x_2 \in \multiplicativegroup{\finiteField}\\
 		x_1 + x_2 = 1}} \chi_1\left(x\right) \chi_2\left(x_2\right).$$
