--- a/references.bib
+++ b/references.bib
@@ -960,4 +960,20 @@
   note   = {In preparation},
 }
 
+@Book{DigneMichel1991,
+  author     = {Digne, Fran\c cois and Michel, Jean},
+  publisher  = {Cambridge University Press, Cambridge},
+  title      = {Representations of finite groups of {L}ie type},
+  year       = {1991},
+  isbn       = {0-521-40117-8; 0-521-40648-X},
+  series     = {London Mathematical Society Student Texts},
+  volume     = {21},
+  doi        = {10.1017/CBO9781139172417},
+  mrclass    = {20G05 (20-02 20C33 20G40)},
+  mrnumber   = {1118841},
+  mrreviewer = {Bhama\ Srinivasan},
+  pages      = {iv+159},
+  url        = {https://doi.org/10.1017/CBO9781139172417},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
