--- a/main.tex
+++ b/main.tex
@@ -239,18 +239,17 @@ $$\sum_{\substack{x_1,x_2 \in \multiplicativegroup{\finiteField}\\
 As before, we have that $\posDblJacobiSum{\pi}{\chi}$ and $\negDblJacobiSum{\pi}{\chi}$ lie in $\Hom_G\left(\pi, \pi\right)$. Since $\pi$ is irreducible, by Schur's lemma there exists scalars $\dblJacobiSumScalar{\pi}{\chi} \in \multiplicativegroup{\cComplex}$ such that $$\dblJacobiSum{\pi}{\chi} = \dblJacobiSumScalar{\pi}{\chi} \cdot \idmap_{\pi}.$$
 
 \calvin{I think I would like to include a main theorem here even if it's not super precise just to let the reader know what we highlight what we about the sum}
-\begin{theorem}[\Cref{thm:doubling-method-gamma-factor-for-deligne-thm:doubling-method-gamma-factor-for-deligne-lusztig},\Cref{thm:computation-of-doubling-gauss-sum-scalar-for-deligne-lusztig-characters}]
-	For classical groups $\algebraicGroup{G}$ and $\chi \neq \pm1$, $\genJacobiKernel{\pi,\chi}$ is a stable function which acts as the scalar
-	\[
-		\dblJacobiSumScalar{\pi}{\chi} = \begin{cases}
-		\varepsilon_{\algebraicGroup{H}} c_{\hermitianSpace}\left(\chi, \fieldCharacter\right) g_T\left(\chi, \theta, \fieldCharacter\right) & + \\
-		c_{\hermitianSpace}\left(\chi, \fieldCharacter\right) \centralCharacter{\pi}\left(-1\right) g_T\left(\chi, \theta, \fieldCharacter\right) & - \textnormal{ and } \algebraicGroup{G} \neq \algebraicGroup{SO}_{2n+1} \\
-		0 & - \textnormal{ and } \algebraicGroup{G} = \algebraicGroup{SO}_{2n+1}
-		\end{cases}
-	\]
-	on $\pi$
-where $c_{\hermitianSpace}\left(\chi, \fieldCharacter\right)$ is an explicit factor and
-$g_T\left(\chi, \theta, \fieldCharacter\right)$ is a product of Guass sums.
+\begin{theorem}[\Cref{thm:doubling-method-gamma-factor-for-deligne-lusztig}, \Cref{thm:computation-of-doubling-gauss-sum-scalar-for-deligne-lusztig-characters}]
+	For classical groups $\algebraicGroup{G}$ and $\chi \neq \pm1$, $\genJacobiKernel{\pi,\chi}$ is a stable function. We have that
+	$$\posDblJacobiSumScalar{\pi}{\chi} =
+		\varepsilon_{\algebraicGroup{H}} c_{\hermitianSpace}\left(\chi, \fieldCharacter\right) g_T\left(\chi, \theta, \fieldCharacter\right),$$
+		and that
+	$$\negJacobiKernel{\pi}{\chi} = \begin{dcases}
+		0 & \algebraicGroup{G} = \algebraicGroup{\SO}_{2n+1},\\
+		\centralCharacter{\pi}\left(-1\right) \posDblJacobiSumScalar{\pi}{\chi} &  \text{Otherwise.}
+	\end{dcases}$$
+Here $c_{\hermitianSpace}\left(\chi, \fieldCharacter\right)$ is an explicit factor and
+$g_T\left(\chi, \theta, \fieldCharacter\right)$ is a product of Gauss sums, see \Cref{subsec:normalization-factor} and \Cref{thm:computation-of-doubling-gauss-sum-scalar-for-deligne-lusztig-characters}.
 \end{theorem}
 In this paper, we study the doubling method Jacobi sums $\dblJacobiSum{\pi}{\chi}$. We compute the scalars $\dblJacobiSumScalar{\pi}{\chi}$ in terms of the Deligne--Lusztig data corresponding to $\pi$ and show that, up to some well understood factors, they match the Kondo Gauss sum of the conjectural functorial transfer of $\pi$ to a general linear group. This is done by combining a couple of ingredients. The first ingredient is a lemma of Saito--Shinoda \cite{SaitoShinoda2000} that allows us to explicitly compute the analogous character sums for Deligne--Lusztig virtual representations $R_{T, \theta}$.  The second ingredient, which is a key ingredient for this computation, is that these Jacobi sums are well behaved, in the sense that they are constant on Lusztig series. To show this, we utilize a multiplicativity property of these Jacobi sums from \cite{GirschZelingher2025} and combine it with a careful analysis of the Deligne--Lusztig data corresponding to $\pi$ after functorial transfer. 
 
@@ -777,7 +776,7 @@ The assumption in \Cref{prop:multiplicativity-of-jacobi-sum-given-support} holds
 	Hence, we have that $\dblJacobiSum{\rho}{\chi} f$ is supported on $P$. 
 \end{proof}
 
-\subsubsection{Gamma factors}
+\subsubsection{Gamma factors}\label{subsec:normalization-factor}
 In order to make the computations more tolerable, it is beneficial to work with fully multiplicative functions. We introduce the doubling method gamma factors.
 
 Let $\chi \colon \multiplicativegroup{\quadraticExtension} \to \multiplicativegroup{\cComplex}$ be a character.
